--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
-    "react-simple-captcha": "^9.3.1"
+    "react-simple-captcha": "^9.3.1",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
