--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@tanstack/react-query": "^5.52.1",
     "axios": "^1.7.5",
     "firebase": "^10.13.0",
+    "html-react-parser": "^5.1.14",
+    "jodit-react": "^4.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
@@ -22,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.8.0",
     "react-simple-captcha": "^9.3.1",
     "react-spinners": "^0.14.1"
   },
@@ -39,6 +42,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "vite": "^5.4.1"
+    "vite": "^5.4.2"
   }
 }
