--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
+    "react-share": "^5.1.0",
     "react-simple-captcha": "^9.3.1",
     "react-spinners": "^0.14.1"
   },
